# server/restapi/operations/user/get_user_by_name.go
@@ -12,16 +12,16 @@ import (
 )
 
 // GetUserByNameHandlerFunc turns a function with the right signature into a get user by name handler
-type GetUserByNameHandlerFunc func(GetUserByNameParams) middleware.Responder
+type GetUserByNameHandlerFunc func(GetUserByNameParams, interface{}) middleware.Responder
 
 // Handle executing the request and returning a response
-func (fn GetUserByNameHandlerFunc) Handle(params GetUserByNameParams) middleware.Responder {
-	return fn(params)
+func (fn GetUserByNameHandlerFunc) Handle(params GetUserByNameParams, principal interface{}) middleware.Responder {
+	return fn(params, principal)
 }
 
 // GetUserByNameHandler interface for that can handle valid get user by name params
 type GetUserByNameHandler interface {
-	Handle(GetUserByNameParams) middleware.Responder
+	Handle(GetUserByNameParams, interface{}) middleware.Responder
 }
 
 // NewGetUserByName creates a new http.Handler for the get user by name operation
@@ -46,12 +46,25 @@ func (o *GetUserByName) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
 	}
 	var Params = NewGetUserByNameParams()
 
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		r = aCtx
+	}
+	var principal interface{}
+	if uprinc != nil {
+		principal = uprinc
+	}
+
 	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
 		o.Context.Respond(rw, r, route.Produces, route, err)
 		return
 	}
 
-	res := o.Handler.Handle(Params) // actually handle the request
+	res := o.Handler.Handle(Params, principal) // actually handle the request
 
 	o.Context.Respond(rw, r, route.Produces, route, res)
 
